# FunkyMooseMixAnalyzerPro

./: .gitignore  Mix Analyzer.spec  README.md  README_DE.md  app.py  build_mac.sh  build_win.bat  requirements.txt  run_mac.command
.github/workflows/: plugin-analysis-tests.yml  plugin-host-validation.yml  plugin-release.yml  windows-plugin-build.yml
assets/: app_icon.icns
core/: advice.py  audio.py  config.py  plugin_bridge.py
plugin/: .gitignore  CMakeLists.txt  README.md  build_macos.sh  install_macos.sh
plugin/Source/: AnalysisModel.cpp  AnalysisModel.h  Main.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/Source/IPC/: OscSender.cpp  OscSender.h
plugin/Source/UI/: ActionChecklistComponent.cpp  ActionChecklistComponent.h  CompareComponent.cpp  CompareComponent.h  MetricsCardComponent.cpp  MetricsCardComponent.h  ScoreComponent.cpp  ScoreComponent.h  SummaryComponent.cpp  SummaryComponent.h  Theme.h  ToneShapeComponent.cpp  ToneShapeComponent.h
plugin/Tests/: AnalysisModelTests.cpp  AudioFixtureTests.cpp
scripts/: build_macos_app.sh  make_dmg.sh  sign_app.sh
static/css/: styles.css
static/js/: app.js
templates/: index.html
tests/: run_tests.sh  test_app_smoke.py
